--- a/Project/project-1/pro02.css
+++ b/Project/project-1/pro02.css
@@ -4,10 +4,13 @@ h1{
     font-size: 30px;
     font-family: 'Roboto', sans-serif;
 }
+body{
+    max-width: 1440px;
+}
 header{
     background-color: black;
-    width: 100%;
-    height: 50px;
+    max-width: 1440px;
+    height: 80px;
     text-align: center;
     display: flex;
     align-items: center;
@@ -15,32 +18,44 @@ header{
     margin-right: 0;
 }
 .div1{
+    max-width: 1420px;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: auto auto auto auto;
+    padding: 15px 10px 15px 10px;
+    gap: 10px;
     background-color: rgb(230, 223, 223);
-    width: 100%;
+    justify-content: space-between;
     justify-items: center;
-
+    align-items: center;
+}
+.div2{
+    max-width: 1440px;
+    height: 300px;
+    background-color: rgb(230, 223, 223);
+    color: rgb(230, 223, 223);
 }
 img{
+    width: 100%;
+    height: 100%;
+    border-radius: 1%;
+}
+.img1{
     width: 98%;
-    height: 350px;
-    border-radius: 5px;
+    height: 98%;
+    border-radius: 1%;
 }
 img:hover{
-    transition-property: all;
-    transition-duration: 1s;
-    transition-delay: 0s;
-    width: 350px;
-    height: 400px;
+    scale: 1.05;
 }
+
+
 footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: black;
-    width: 100%;
+    max-width: 1440px;
     height: 200px;
 }
 td{
@@ -68,4 +83,45 @@ a:hover{
 td:hover{
     color: aqua;
     cursor: grab;
+}
+@media only screen and (max-width: 768px){
+    h1{
+        color: white;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif;
+    }
+    p{
+        word-spacing: 15px;
+        font-size: 15px;
+    }
+    .border1{
+        border: 1px;
+        border-style: none none none solid;
+        border-color: white;
+        font-size: 15px;
+    }
+    .div1{
+        max-width: 1430px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        padding: 10px 5px 10px 5px;
+        gap: 5px;
+        background-color: rgb(230, 223, 223);
+        justify-content: space-between;
+    
+    }
+    .div2{
+        max-width: 1440px;
+        height: 150px;
+        background-color: rgb(230, 223, 223);
+        color: rgb(230, 223, 223);
+    }
+    img:hover{
+        scale: 1.05;
+    }
+    .img1{
+        width: 100%;
+        height: 100%;
+        border-radius: 1%;
+    }
 }
