--- a/Project/project-7/pto07.css
+++ b/Project/project-7/pto07.css
@@ -2,7 +2,12 @@ body {
   display: flex;
   gap: 50px;
 }
-
+h1 {
+  position: absolute;
+  top: 300px;
+  left: 200px;
+  z-index: 1;
+}
 .box {
   width: 500px;
   height: 500px;
@@ -53,7 +58,7 @@ body {
   height: 80px;
   background-color: aqua;
   animation-name: first;
-  animation-duration: 3s;
+  animation-duration: 6s;
   animation-timing-function: linear;
   animation-delay: 0s;
   animation-iteration-count: infinite;
@@ -64,7 +69,7 @@ body {
   left: 775px;
   color: white;
   animation-name: second;
-  animation-duration: 3s;
+  animation-duration: 6s;
   animation-timing-function: linear;
   animation-delay: 0s;
   animation-iteration-count: infinite;
